# formata

./: README.md  pyproject.toml  requirements.txt
analysis/: main.py
formata/: maker.py  parser.py  utils.py
formata/templates/: base.WTH  table_NorthDakota.txt
tests/: test_formata.py  test_maker.py  test_parser.py
