[tool.poetry]
name = "formata"
version = "0.1.0"
description = ""
authors = ["Josue K <josue.kpodo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
xarray = "^0.15.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.8.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
